<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/regtv1"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="80dp" />
        <TextView
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="200dp" />
        <ImageView
            android:id="@+id/iv_registration_photo"
            android:background="@drawable/ic_brightness_1_black_24dp"
            android:layout_marginTop="55dp"
            android:elevation="1dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/photo_selector" />

        <LinearLayout
            android:layout_margin="20dp"
            android:layout_below="@+id/regtv1"
            android:background="#ffffff"
            android:layout_centerVertical="true"
            android:elevation="8dp"
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/et_registration_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/name_text"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/et_registration_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_text"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--  Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/et_registration_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password_text"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/et_registration_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/phone_number_text"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/et_registration_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/city_text"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_registration_register"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_text"/>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>