<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RENTINGIN AJA"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layout_login_container"
        app:layout_constraintEnd_toEndOf="@+id/layout_login_container"
        app:layout_constraintStart_toStartOf="@+id/layout_login_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <RelativeLayout
        android:id="@+id/layout_login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:gravity="center"
        android:background="@color/white"
        android:padding="20dp"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout_login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <TextView
                android:id="@+id/tv_login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_text"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_login_forms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_login_title"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/email_text"
                android:textColor="@color/white"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="@android:color/secondary_text_dark_nodisable" />

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/password_text"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@android:color/secondary_text_light_nodisable"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.542" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/layout_login_container"
        app:layout_constraintStart_toStartOf="@+id/layout_login_container"
        app:layout_constraintTop_toBottomOf="@+id/layout_login_container">

        <Button
            android:id="@+id/btn_login_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/ask_sign_up"
            android:textColor="@android:color/holo_blue_dark" />

        <Button
            android:id="@+id/btn_login_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/sign_in_text"
            android:textColor="@color/white"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>