<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_alignParentTop="true"
        android:background="#455a64"
        android:layout_width="match_parent"
        android:layout_height="200dp">
    </RelativeLayout>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <RelativeLayout
            android:paddingBottom="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:id="@+id/tv_identity_confirm_title"
                android:padding="16dp"
                android:gravity="center"
                android:text="Identity Confirmation"
                android:textColor="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <LinearLayout
                android:layout_below="@+id/tv_identity_confirm_title"
                android:elevation="8dp"
                android:background="#ffffff"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_centerVertical="true">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#cfd8dc"
                    android:background="@drawable/round_corner"
                    android:layout_marginBottom="8dp">
                    <EditText
                        android:id="@+id/et_identity_confirm_name"
                        android:padding="16dp"
                        android:background="@drawable/round_corner"
                        android:gravity="center_vertical"
                        android:textSize="14sp"
                        android:hint="@string/name_text"
                        android:textColor="#000000"
                        android:backgroundTint="#cfd8dc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="#cfd8dc"
                    android:background="@drawable/round_corner"
                    android:layout_marginBottom="8dp">
                    <EditText
                        android:id="@+id/et_identity_confirm_phone_number"
                        android:padding="16dp"
                        android:background="@drawable/round_corner"
                        android:gravity="center_vertical"
                        android:textSize="14sp"
                        android:textColor="#000000"
                        android:hint="@string/phone_number_text"
                        android:backgroundTint="#cfd8dc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#cfd8dc"
                    android:background="@drawable/round_corner"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <EditText
                        android:id="@+id/et_identity_confirm_email_address"
                        android:padding="16dp"
                        android:background="@drawable/round_corner"
                        android:gravity="center_vertical"
                        android:textSize="14sp"
                        android:textColor="#000000"
                        android:hint="@string/email_text"
                        android:backgroundTint="#cfd8dc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_identity_confirm_car_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:padding="6dp"
                    />
                <TextView
                    android:id="@+id/tv_identity_confirm_car_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:padding="6dp"
                    />
                <TextView
                    android:id="@+id/tv_identity_confirm_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Total\t:\tRp 0"
                    android:textColor="#000000"
                    android:padding="6dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_identity_confirm_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:padding="6dp"
                    />
                <TextView
                    android:id="@+id/tv_identity_confirm_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:padding="6dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_identity_confirm_confirm"
            android:elevation="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="Confirm"
            android:textColor="#fff" />
    </LinearLayout>

</RelativeLayout>